--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "bin-dir": "bin"
     },
     "require": {
-        "jonnyw/php-phantomjs": "4.*"
+        "jonnyw/php-phantomjs": "4.*",
+        "composer-plugin-api": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
