[dev] Test composer plugin (3)

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,6 @@
         "composer/composer": "^1.4"
     },
     "extra": {
-        "class": "Crawler\\Composer\\Installer"
+        "class": "Crawler\\Composer\\Plugin"
     }
 }
