Title and download

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
+title: Crawler - The library to scrape websites
+description: Download all your favourite website data
+show_downloads: true
 theme: jekyll-theme-architect
