--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "require": {
         "jonnyw/php-phantomjs": "4.*",
-        "composer-plugin-api": "^1.0"
+        "capimichi/cache": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
